Store resolved vdom nodes on dom elements
* This makes patching easier as we don't have to keep reference somewhere else

--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "reflecti",
   "version": "0.1.0",
   "description": "A microframework frontend thats easy",
-  "main": "dist/index.js",
+  "main": "dist/reflecti.js",
   "scripts": {
     "test": "jest -c .jestrc.json",
-    "lint": "tslint --fix src/**/*.ts"
+    "lint": "tslint --fix src/**/*.ts",
+    "build": "tsc && babel dist --out-dir dist && uglifyjs dist/*.js -mc --source-map -o dist/reflecti.js"
   },
   "files": [
-    "dist",
+    "dist/reflecti.js",
     "src"
   ],
   "keywords": [
@@ -25,6 +26,7 @@
   "repository": "seanchambo/reflecti",
   "devDependencies": {
     "@types/jest": "^22.2.3",
+    "babel-cli": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "jest": "^23.0.1",
